--- a/test/PostgreSql/BulkTest.PostgreSql-5.0.csproj
+++ b/test/PostgreSql/BulkTest.PostgreSql-5.0.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" Exclude="..\Common\MergeInto.cs" />
+    <Compile Include="..\Common\*.cs" Exclude="..\Common\MergeInto.cs;..\Common\UpsertRelated.cs" />
   </ItemGroup>
 
   <ItemGroup>
