Refactored MergeQueryRewriter and fix upsert generation for postgresql.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,3 @@
 ﻿[*.cs]
-
-# EF1001: Internal EF Core API usage.
 dotnet_diagnostic.EF1001.severity = none
+csharp_style_prefer_range_operator = false:suggestion
