--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
 
   <PropertyGroup>
+    <!-- Packaging Options -->
     <LangVersion>8.0</LangVersion>
     <Authors>borisdj;yang-er</Authors>
     <Description>Entity Framework Core Batch Extensions for Insert Update Delete and Read (CRUD) operations</Description>
@@ -10,40 +11,50 @@
     <PackageTags>EntityFrameworkCore</PackageTags>
     <PackageReleaseNotes>Redesign the APIs, support INSERT INTO SELECT and MERGE INTO instructions.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/yang-er/efcore-ext</RepositoryUrl>
+
+    <!-- Symbol Packaging -->
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
+
+    <!-- Versioning -->
     <XysMinorVersion>22</XysMinorVersion>
+
+    <!-- Common Condition Names -->
+    <DotNetCoreVersion>Error</DotNetCoreVersion>
+    <IsUnitTest>False</IsUnitTest>
+    <DotNetCoreVersion Condition=" $(MSBuildProjectName.EndsWith('-5.0')) ">5.0</DotNetCoreVersion>
+    <DotNetCoreVersion Condition=" $(MSBuildProjectName.EndsWith('-3.1')) ">3.1</DotNetCoreVersion>
+    <IsUnitTest Condition=" $(MSBuildProjectName.StartsWith('BulkTest')) ">True</IsUnitTest>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" $(MSBuildProjectName.EndsWith('-5.0')) ">
+
+
+  <!-- Project Defaults Bootstrapping -->
+  <PropertyGroup Condition=" $(DotNetCoreVersion) == '5.0' ">
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>$(MSBuildProjectName.Replace('-5.0', ''))</AssemblyName>
-    <DotNetCoreVersion>5.0</DotNetCoreVersion>
     <EntityFrameworkCoreVersion>[5.0.1,6.0.0)</EntityFrameworkCoreVersion>
+    <EFCoreNpgsqlCoreVersion>[5.0.1,6.0.0)</EFCoreNpgsqlCoreVersion>
     <DefineConstants>$(DefineConstants);EFCORE50</DefineConstants>
     <XysMinorVersion>$(XysMinorVersion)-preview</XysMinorVersion>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" $(MSBuildProjectName.EndsWith('-3.1')) ">
+  <PropertyGroup Condition=" $(DotNetCoreVersion) == '3.1' ">
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>$(MSBuildProjectName.Replace('-3.1', ''))</AssemblyName>
-    <DotNetCoreVersion>3.1</DotNetCoreVersion>
     <EntityFrameworkCoreVersion>[3.1.10,5.0.0)</EntityFrameworkCoreVersion>
+    <EFCoreNpgsqlCoreVersion>[3.1.4,5.0.0)</EFCoreNpgsqlCoreVersion>
     <DefineConstants>$(DefineConstants);EFCORE31</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" $(MSBuildProjectName.StartsWith('BulkTest')) ">
+  <PropertyGroup Condition=" $(IsUnitTest) == 'True' ">
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     <DefineConstants>$(DefineConstants);EFCORE_TEST</DefineConstants>
     <NoWarn>$(NoWarn);xUnit1013</NoWarn>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" $(MSBuildProjectName.EndsWith('-3.1')) And $(MSBuildProjectName.StartsWith('BulkTest')) ">
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" $(MSBuildProjectName.StartsWith('BulkTest')) ">
+  <ItemGroup Condition=" $(IsUnitTest) == 'True' ">
     <AssemblyAttribute Include="Xunit.TestCaseOrdererAttribute">
       <_Parameter1>PriorityOrderer</_Parameter1>
       <_Parameter2>$(AssemblyName)</_Parameter2>
@@ -54,6 +65,9 @@
     <TargetFramework>ERROR</TargetFramework>
   </PropertyGroup>
 
+
+
+  <!-- Assembly Information -->
   <PropertyGroup>
     <RootNamespace>$(AssemblyName)</RootNamespace>
     <BaseIntermediateOutputPath>obj\$(TargetFramework)\</BaseIntermediateOutputPath>
