--- a/src/PostgreSql/Microsoft.EntityFrameworkCore.Bulk.PostgreSql-5.0.csproj
+++ b/src/PostgreSql/Microsoft.EntityFrameworkCore.Bulk.PostgreSql-5.0.csproj
@@ -2,7 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="$(EntityFrameworkCoreVersion)" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="[5.0.1,6.0.0)" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="$(EFCoreNpgsqlCoreVersion)" />
     <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-$(DotNetCoreVersion).csproj" />
   </ItemGroup>
 
