--- a/src/SqlServer/Microsoft.EntityFrameworkCore.Bulk.SqlServer-5.0.csproj
+++ b/src/SqlServer/Microsoft.EntityFrameworkCore.Bulk.SqlServer-5.0.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <DefineConstants>$(DefineConstants);RELATIONAL;SQL_SERVER</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
     <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore.SqlServer\EFCore.SqlServer.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
@@ -10,6 +14,7 @@
     <Compile Remove="obj\**" />
     <EmbeddedResource Remove="obj\**" />
     <None Remove="obj\**" />
+    <Compile Include="..\RelationalSpecified\**" />
   </ItemGroup>
 
 </Project>
