Changes on tests.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -75,6 +75,6 @@
   </PropertyGroup>
 
   <!-- Source Code Debugging for EFCore -->
-  <Import Project="Directory.Build.Override.props" />
+  <Import Project="..\Directory.Build.Override.props" />
 
 </Project>
