--- a/test/TestUtilities/EFCore.TestUtilities.csproj
+++ b/test/TestUtilities/EFCore.TestUtilities.csproj
@@ -1,20 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <IsPackable>false</IsPackable>
-    <DefineConstants Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">$(DefineConstants);EFCORE31</DefineConstants>
-    <DefineConstants Condition=" '$(TargetFramework)' == 'net5.0' ">$(DefineConstants);EFCORE50</DefineConstants>
     <AssemblyName>Microsoft.EntityFrameworkCore.TestUtilities</AssemblyName>
-    <RootNamespace>Microsoft.EntityFrameworkCore.TestUtilities</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" Condition=" '$(TargetFramework)' == 'net5.0' " />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" Condition=" '$(TargetFramework)' == 'net5.0' " />
     <PackageReference Include="xunit" Version="2.4.0" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <RootNamespace>$(AssemblyName)</RootNamespace>
+    <Title>$(AssemblyName)</Title>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+  </PropertyGroup>
 
 </Project>
