Union the test discover.

--- a/test/InMemory/BulkTest.InMemory-3.1.csproj
+++ b/test/InMemory/BulkTest.InMemory-3.1.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" Exclude="..\Common\FeatureModify.cs" />
+    <Compile Include="..\Common\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
