--- a/test/InMemory/BulkTest.InMemory-5.0.csproj
+++ b/test/InMemory/BulkTest.InMemory-5.0.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" Exclude="..\Common\FeatureModify.cs" />
+    <Compile Include="..\Common\*.cs" />
   </ItemGroup>
 
   <ItemGroup>
