--- a/test/PostgreSql/BulkTest.PostgreSql-3.1.csproj
+++ b/test/PostgreSql/BulkTest.PostgreSql-3.1.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" />
+    <Compile Include="..\Common\*.cs" Exclude="..\Common\MergeInto.cs" />
   </ItemGroup>
 
   <ItemGroup>
