--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -26,6 +26,8 @@
     <DotNetCoreVersion Condition=" $(MSBuildProjectName.EndsWith('-5.0')) ">5.0</DotNetCoreVersion>
     <DotNetCoreVersion Condition=" $(MSBuildProjectName.EndsWith('-3.1')) ">3.1</DotNetCoreVersion>
     <IsUnitTest Condition=" $(MSBuildProjectName.StartsWith('BulkTest')) ">True</IsUnitTest>
+    <IsUnitTest Condition=" $(MSBuildProjectName.EndsWith('.Tests-3.1')) ">True</IsUnitTest>
+    <IsUnitTest Condition=" $(MSBuildProjectName.EndsWith('.Tests-5.0')) ">True</IsUnitTest>
   </PropertyGroup>
 
   <!-- Project Defaults Bootstrapping -->
