--- a/test/Specifications/EFCore.Bulk.Tests-3.1.csproj
+++ b/test/Specifications/EFCore.Bulk.Tests-3.1.csproj
@@ -1,28 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
-    <DefineConstants>$(DefineConstants);RELATIONAL;SQL_SERVER</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\src\Abstraction\Microsoft.EntityFrameworkCore.Bulk-3.1.csproj" />
     <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
-    <ProjectReference Include="..\..\src\SqlServer\Microsoft.EntityFrameworkCore.Bulk.SqlServer-3.1.csproj" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <RootNamespace>$(AssemblyName)</RootNamespace>
+    <Title>$(AssemblyName)</Title>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+  </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="obj\**" />
