--- a/test/Cacheable/EFCore.Cacheable.Tests-5.0.csproj
+++ b/test/Cacheable/EFCore.Cacheable.Tests-5.0.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
-    <DefineConstants>$(DefineConstants);RELATIONAL;POSTGRE_SQL</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Cacheable.Tests</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -16,12 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" Exclude="..\Common\MergeInto.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
-    <ProjectReference Include="..\..\src\PostgreSql\Microsoft.EntityFrameworkCore.Bulk.PostgreSql-5.0.csproj" />
+    <ProjectReference Include="..\..\src\InMemory\Microsoft.EntityFrameworkCore.Bulk.InMemory-5.0.csproj" />
   </ItemGroup>
 
   <ItemGroup>
