--- a/test/PostgreSql/EFCore.Bulk.PostgreSql.Tests-3.1.csproj
+++ b/test/PostgreSql/EFCore.Bulk.PostgreSql.Tests-3.1.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
-    <DefineConstants>$(DefineConstants);IN_MEMORY</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.PostgreSQL.Tests</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -16,12 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\*.cs" Exclude="..\Common\FeatureModify.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
-    <ProjectReference Include="..\..\src\InMemory\Microsoft.EntityFrameworkCore.Bulk.InMemory-5.0.csproj" />
+    <ProjectReference Include="..\Relational\EFCore.Bulk.Relational.Tests-3.1.csproj" />
+    <ProjectReference Include="..\..\src\PostgreSql\Microsoft.EntityFrameworkCore.Bulk.PostgreSql-3.1.csproj" />
   </ItemGroup>
 
   <ItemGroup>
