--- a/test/PostgreSql/EFCore.Bulk.PostgreSql.Tests-5.0.csproj
+++ b/test/PostgreSql/EFCore.Bulk.PostgreSql.Tests-5.0.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.PostgreSQL.Tests</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
-    <ProjectReference Include="..\..\src\InMemory\Microsoft.EntityFrameworkCore.Bulk.InMemory-3.1.csproj" />
+    <ProjectReference Include="..\Relational\EFCore.Bulk.Relational.Tests-5.0.csproj" />
+    <ProjectReference Include="..\..\src\PostgreSql\Microsoft.EntityFrameworkCore.Bulk.PostgreSql-5.0.csproj" />
   </ItemGroup>
 
   <ItemGroup>
