--- a/test/Relational/EFCore.Bulk.Relational.Tests-5.0.csproj
+++ b/test/Relational/EFCore.Bulk.Relational.Tests-5.0.csproj
@@ -4,21 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Relational.Tests</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj" />
     <ProjectReference Include="..\Specifications\EFCore.Bulk.Tests-5.0.csproj" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <RootNamespace>$(AssemblyName)</RootNamespace>
-    <Title>$(AssemblyName)</Title>
-    <PackageVersion>1.0.0</PackageVersion>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-  </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="obj\**" />
