--- a/test/Specifications/EFCore.Bulk.Tests-3.1.csproj
+++ b/test/Specifications/EFCore.Bulk.Tests-3.1.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Tests</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,15 +16,6 @@
     <ProjectReference Include="..\..\src\Abstraction\Microsoft.EntityFrameworkCore.Bulk-3.1.csproj" />
     <ProjectReference Include="..\TestUtilities\EFCore.TestUtilities.csproj" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <RootNamespace>$(AssemblyName)</RootNamespace>
-    <Title>$(AssemblyName)</Title>
-    <PackageVersion>1.0.0</PackageVersion>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-  </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="obj\**" />
