--- a/Directory.Build.Override.props
+++ b/Directory.Build.Override.props
@@ -7,11 +7,13 @@
   <PropertyGroup Condition=" $(DotNetCoreVersion) == '5.0' AND $(UseSourceDebugging) == 'True' ">
     <EFCoreSourceDirectory>$(MSBuildThisFileDirectory)..\microsoft\efcore-5</EFCoreSourceDirectory>
     <EFCorePgSourceDirectory>$(MSBuildThisFileDirectory)..\microsoft\efcore.pg-5</EFCorePgSourceDirectory>
+    <EFCoreMySourceDirectory>$(MSBuildThisFileDirectory)..\microsoft\efcore.my-5</EFCoreMySourceDirectory>
   </PropertyGroup>
 
   <PropertyGroup Condition=" $(DotNetCoreVersion) == '3.1' AND $(UseSourceDebugging) == 'True' ">
     <EFCoreSourceDirectory>$(MSBuildThisFileDirectory)..\microsoft\efcore</EFCoreSourceDirectory>
     <EFCorePgSourceDirectory>$(MSBuildThisFileDirectory)..\microsoft\efcore.pg</EFCorePgSourceDirectory>
+    <EFCoreMySourceDirectory>$(MSBuildThisFileDirectory)..\microsoft\efcore.my</EFCoreMySourceDirectory>
   </PropertyGroup>
 
 </Project>
