--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -25,15 +25,12 @@
     <IsUnitTest>False</IsUnitTest>
     <DotNetCoreVersion Condition=" $(MSBuildProjectName.EndsWith('-5.0')) ">5.0</DotNetCoreVersion>
     <DotNetCoreVersion Condition=" $(MSBuildProjectName.EndsWith('-3.1')) ">3.1</DotNetCoreVersion>
-    <IsUnitTest Condition=" $(MSBuildProjectName.StartsWith('BulkTest')) ">True</IsUnitTest>
     <IsUnitTest Condition=" $(MSBuildProjectName.EndsWith('.Tests-3.1')) ">True</IsUnitTest>
     <IsUnitTest Condition=" $(MSBuildProjectName.EndsWith('.Tests-5.0')) ">True</IsUnitTest>
   </PropertyGroup>
 
   <!-- Project Defaults Bootstrapping -->
   <PropertyGroup Condition=" $(DotNetCoreVersion) == '5.0' ">
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>$(MSBuildProjectName.Replace('-5.0', ''))</AssemblyName>
     <EntityFrameworkCoreVersion>[5.0.2,6.0.0)</EntityFrameworkCoreVersion>
     <EFCoreNpgsqlCoreVersion>[5.0.2,6.0.0)</EFCoreNpgsqlCoreVersion>
     <EFCorePomeloCoreVersion>5.0.0-alpha.2</EFCorePomeloCoreVersion>
@@ -42,8 +39,6 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" $(DotNetCoreVersion) == '3.1' ">
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>$(MSBuildProjectName.Replace('-3.1', ''))</AssemblyName>
     <EntityFrameworkCoreVersion>[3.1.11,5.0.0)</EntityFrameworkCoreVersion>
     <EFCoreNpgsqlCoreVersion>[3.1.11,5.0.0)</EFCoreNpgsqlCoreVersion>
     <EFCorePomeloCoreVersion>[3.2.4,5.0.0)</EFCorePomeloCoreVersion>
@@ -63,14 +58,9 @@
     </AssemblyAttribute>
   </ItemGroup>
 
-  <PropertyGroup Condition=" $(TargetFramework) == '' ">
-    <TargetFramework>ERROR</TargetFramework>
-  </PropertyGroup>
-
   <!-- Assembly Information -->
   <PropertyGroup>
-    <RootNamespace>$(AssemblyName)</RootNamespace>
-    <BaseIntermediateOutputPath>obj\$(TargetFramework)\</BaseIntermediateOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)\artifacts\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <Title>$(AssemblyName)</Title>
     <PackageVersion>$(DotNetCoreVersion).$(XysMinorVersion)</PackageVersion>
     <Version>$(DotNetCoreVersion).0</Version>
