--- a/src/Abstraction/Microsoft.EntityFrameworkCore.Bulk-5.0.csproj
+++ b/src/Abstraction/Microsoft.EntityFrameworkCore.Bulk-5.0.csproj
@@ -1,18 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
     <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore\EFCore.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
   </ItemGroup>
 
 </Project>
