--- a/src/InMemory/Microsoft.EntityFrameworkCore.Bulk.InMemory-3.1.csproj
+++ b/src/InMemory/Microsoft.EntityFrameworkCore.Bulk.InMemory-3.1.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <DefineConstants>$(DefineConstants);IN_MEMORY</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.InMemory</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
     <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore.InMemory\EFCore.InMemory.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
     <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-$(DotNetCoreVersion).csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
   </ItemGroup>
 
 </Project>
