--- a/src/MySql/Microsoft.EntityFrameworkCore.Bulk.MySql-5.0.csproj
+++ b/src/MySql/Microsoft.EntityFrameworkCore.Bulk.MySql-5.0.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <DefineConstants>$(DefineConstants);RELATIONAL;MYSQL</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.MySql</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Relational\Provider\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="$(EFCorePomeloCoreVersion)" Condition=" $(EFCoreMySourceDirectory) == '' " />
     <ProjectReference Include="$(EFCoreMySourceDirectory)\src\EFCore.MySql\EFCore.MySql.csproj" Condition=" $(EFCoreMySourceDirectory) != '' " />
     <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-$(DotNetCoreVersion).csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
-    <Compile Include="..\RelationalSpecified\**" />
   </ItemGroup>
 
 </Project>
