--- a/src/Relational/Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj
+++ b/src/Relational/Microsoft.EntityFrameworkCore.Bulk.Relational-5.0.csproj
@@ -1,15 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <DefineConstants>$(DefineConstants);RELATIONAL</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.Relational</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Provider\**" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
     <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore.Relational\EFCore.Relational.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
     <ProjectReference Include="..\Abstraction\Microsoft.EntityFrameworkCore.Bulk-$(DotNetCoreVersion).csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
   </ItemGroup>
 
 </Project>
