--- a/src/SqlServer/Microsoft.EntityFrameworkCore.Bulk.SqlServer-3.1.csproj
+++ b/src/SqlServer/Microsoft.EntityFrameworkCore.Bulk.SqlServer-3.1.csproj
@@ -1,20 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DefineConstants>$(DefineConstants);RELATIONAL;SQL_SERVER</DefineConstants>
+    <AssemblyName>Microsoft.EntityFrameworkCore.Bulk.SqlServer</AssemblyName>
+    <RootNamespace>Microsoft.EntityFrameworkCore</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Relational\Provider\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(EntityFrameworkCoreVersion)" Condition=" $(EFCoreSourceDirectory) == '' " />
     <ProjectReference Include="$(EFCoreSourceDirectory)\src\EFCore.SqlServer\EFCore.SqlServer.csproj" Condition=" $(EFCoreSourceDirectory) != '' " />
     <ProjectReference Include="..\Relational\Microsoft.EntityFrameworkCore.Bulk.Relational-$(DotNetCoreVersion).csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
-    <Compile Include="..\RelationalSpecified\**" />
   </ItemGroup>
 
 </Project>
